force-app/main/default/objects/Competitor_Intel__c/Competitor_Intel__c.object-meta.xml
<CustomObject>
    <description>Competitor pricing and feedback captured on the customer relationship and opportunity.</description>
    <label>Competitor Intel</label>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Intel Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Intel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>