force-app/main/default/objects/Competitor_Intel__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitor Intel</relationshipLabel>
    <relationshipName>Competitor_Intel</relationshipName>
    <type>Lookup</type>
</CustomField>