force-app/main/default/objects/Competitor_Intel__c/fields/Customer_Preference__c.field-meta.xml
<CustomField>
    <fullName>Customer_Preference__c</fullName>
    <label>Customer Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>