force-app/main/default/objects/Competitor_Intel__c/fields/Intel_Date__c.field-meta.xml
<CustomField>
    <fullName>Intel_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Intel Date</label>
    <type>Date</type>
</CustomField>