force-app/main/default/objects/Competitor_Intel__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lead this intel belongs to (set from the opportunity when logged there).</inlineHelpText>
    <label>Source Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Competitor Intel</relationshipLabel>
    <relationshipName>Lead_Competitor_Intel</relationshipName>
    <type>Lookup</type>
</CustomField>