force-app/main/default/objects/Competitor_Intel__c/fields/Price_Unit__c.field-meta.xml
<CustomField>
    <fullName>Price_Unit__c</fullName>
    <label>Price Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>per MT</fullName>
                <default>true</default>
                <label>per MT</label>
            </value>
            <value>
                <fullName>per KG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>