force-app/main/default/objects/Competitor_Intel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Competitor_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Product__c</columns>
    <columns>Quoted_Price__c</columns>
    <columns>Customer_Preference__c</columns>
    <columns>Source__c</columns>
    <columns>Intel_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Competitor Intel</label>
</ListView>